src/tests/fixtures/directives/defineCustomDirectiveLocationInvalid.invalid.ts.expected
-----------------
INPUT
----------------- 
/**
 * This is my custom directive.
 * @gqlDirective on WHOOPS
 */
export function customDirective() {}

-----------------
OUTPUT
-----------------
src/tests/fixtures/directives/defineCustomDirectiveLocationInvalid.invalid.ts:3:4 - error: Syntax Error: Unexpected Name "WHOOPS".

3  * @gqlDirective on WHOOPS
     ~~~~~~~~~~~~~~~~~~~~~~~
4  */
  ~
